--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: '猴哥'
-subtitle: '猴哥'
+title: 猴哥
+subtitle: ihooge.com
 description:
 keywords:
-author: 'Hooge'
+author: Hooge
 language:
 timezone:
 
