--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   },
   "dependencies": {
     "hexo": "^3.7.0",
+    "hexo-fs": "^1.0.2",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-stylus": "^0.3.3",
     "hexo-renderer-marked": "^0.3.2",
-    "hexo-server": "^0.3.1"
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-server": "^0.3.1",
+    "hexo-util": "^0.6.3"
   }
 }
